--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "jsonwebtoken": "^8.4.0",
     "mocha": "^5.2.0",
     "mongoose": "^5.4.13",
+    "mongoose-validator": "^2.1.0",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0",
-    "validator": "^10.11.0"
+    "passport-local": "^1.0.0"
   }
 }
