--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1" 
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.4.0",
     "mocha": "^5.2.0",
     "mongoose": "^5.4.13",
+    "mongoose-autopopulate": "^0.9.1",
     "mongoose-validator": "^2.1.0",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
