--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "server-side-capstone",
+  "name": "dream-journal",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
